--- a/webpack-course/package.json
+++ b/webpack-course/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "build:local": "webpack --mode production",
     "build:external": "webpack --config ./external/webpack.config.js",
-    "build:external:production": "webpack --config ./external/webpack.config.js --mode production"
+    "build:external:production": "webpack --config ./external/webpack.config.js --mode production",
+    "build:multi": "webpack --config ./multi-entry-points/webpack.config.js"
   },
   "keywords": [],
   "author": "Miguel Prada <mapra99@gmail.com>",
