--- a/webpack-course/package.json
+++ b/webpack-course/package.json
@@ -8,13 +8,18 @@
     "build:local": "webpack --mode production",
     "build:external": "webpack --config ./external/webpack.config.js",
     "build:external:production": "webpack --config ./external/webpack.config.js --mode production",
-    "build:multi": "webpack --config ./multi-entry-points/webpack.config.js"
+    "build:multi": "webpack --config ./multi-entry-points/webpack.config.js",
+    "build:css-loader": "webpack --config ./css-style-loader/webpack.config.js"
   },
   "keywords": [],
   "author": "Miguel Prada <mapra99@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "5.0.1",
     "webpack": "4.32.2",
-    "webpack-cli": "3.3.2"
+    "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "style-loader": "^2.0.0"
   }
 }
