--- a/webpack-course/package.json
+++ b/webpack-course/package.json
@@ -16,6 +16,8 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "5.0.1",
+    "html-webpack-plugin": "4.5.0",
+    "mini-css-extract-plugin": "1.3.2",
     "webpack": "4.32.2",
     "webpack-cli": "^3.3.12"
   },
