--- a/webpack-course/package.json
+++ b/webpack-course/package.json
@@ -9,19 +9,19 @@
     "build:external": "webpack --config ./external/webpack.config.js",
     "build:external:production": "webpack --config ./external/webpack.config.js --mode production",
     "build:multi": "webpack --config ./multi-entry-points/webpack.config.js",
-    "build:css-loader": "webpack --config ./css-style-loader/webpack.config.js"
+    "build:css-loader": "webpack --config ./css-style-loader/webpack.config.js",
+    "build:plugins": "webpack --config ./plugins/webpack.config.js"
   },
   "keywords": [],
   "author": "Miguel Prada <mapra99@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "css-loader": "5.0.1",
-    "html-webpack-plugin": "4.5.0",
-    "mini-css-extract-plugin": "1.3.2",
+    "css-loader": "2.1.1",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.7.0",
+    "style-loader": "^2.0.0",
     "webpack": "4.32.2",
     "webpack-cli": "^3.3.12"
   },
-  "dependencies": {
-    "style-loader": "^2.0.0"
-  }
+  "dependencies": {}
 }
