--- a/webpack-course/package.json
+++ b/webpack-course/package.json
@@ -10,7 +10,8 @@
     "build:external:production": "webpack --config ./external/webpack.config.js --mode production",
     "build:multi": "webpack --config ./multi-entry-points/webpack.config.js",
     "build:css-loader": "webpack --config ./css-style-loader/webpack.config.js",
-    "build:plugins": "webpack --config ./plugins/webpack.config.js"
+    "build:plugins": "webpack --config ./plugins/webpack.config.js",
+    "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js"
   },
   "keywords": [],
   "author": "Miguel Prada <mapra99@gmail.com>",
@@ -21,7 +22,7 @@
     "mini-css-extract-plugin": "0.7.0",
     "style-loader": "^2.0.0",
     "webpack": "4.32.2",
-    "webpack-cli": "^3.3.12"
-  },
-  "dependencies": {}
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "3.11.0"
+  }
 }
