--- a/webpack-course/package.json
+++ b/webpack-course/package.json
@@ -12,12 +12,17 @@
     "build:css-loader": "webpack --config ./css-style-loader/webpack.config.js",
     "build:plugins": "webpack --config ./plugins/webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
-    "build:dev:hot-module": "webpack-dev-server --config ./hot-module-replacement/webpack.config.js"
+    "build:dev:hot-module": "webpack-dev-server --config ./hot-module-replacement/webpack.config.js",
+    "build:babel": "webpack-dev-server --config ./babel/webpack.config.js"
   },
   "keywords": [],
   "author": "Miguel Prada <mapra99@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "7.12.9",
+    "@babel/plugin-transform-runtime": "7.12.1",
+    "@babel/preset-env": "7.12.7",
+    "babel-loader": "8.2.2",
     "css-loader": "2.1.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.7.0",
@@ -25,5 +30,8 @@
     "webpack": "4.32.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "3.11.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "7.12.5"
   }
 }
