--- a/webpack-course/package.json
+++ b/webpack-course/package.json
@@ -13,7 +13,8 @@
     "build:plugins": "webpack --config ./plugins/webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
     "build:dev:hot-module": "webpack-dev-server --config ./hot-module-replacement/webpack.config.js",
-    "build:babel": "webpack-dev-server --config ./babel/webpack.config.js"
+    "build:babel": "webpack-dev-server --config ./babel/webpack.config.js",
+    "build:jsx": "webpack-dev-server --config ./jsx-support/webpack.config.js"
   },
   "keywords": [],
   "author": "Miguel Prada <mapra99@gmail.com>",
@@ -22,6 +23,7 @@
     "@babel/core": "7.12.9",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.7",
+    "@babel/preset-react": "7.12.7",
     "babel-loader": "8.2.2",
     "css-loader": "2.1.1",
     "html-webpack-plugin": "3.2.0",
@@ -32,6 +34,8 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "@babel/runtime": "7.12.5"
+    "@babel/runtime": "7.12.5",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
